--- a/index.html
+++ b/index.html
@@ -101,17 +101,21 @@
             <!-- Status Banner -->
             <div class="bg-gradient-to-r from-blue-50 to-indigo-50 border-2 border-blue-200 rounded-lg p-6 mb-8 max-w-3xl mx-auto">
                 <div class="flex items-center justify-center gap-3 mb-3">
-                    <i data-lucide="heart" class="text-blue-600 w-6 h-6"></i>
-                    <span class="text-blue-800 font-heading font-bold text-xl">Philosophie OpenSource</span>
-                    <i data-lucide="heart" class="text-blue-600 w-6 h-6"></i>
+                    <i data-lucide="github" class="text-blue-600 w-6 h-6"></i>
+                    <span class="text-blue-800 font-heading font-bold text-xl">🎉 Basé sur notre solution Open Source</span>
+                    <i data-lucide="code-2" class="text-blue-600 w-6 h-6"></i>
                 </div>
                 <p class="text-blue-700 font-semibold text-lg mb-2">
-                    Dans le respect de notre philosophie OpenSource :
+                    Notre offre commerciale s'appuie sur notre projet open source :
                 </p>
                 <div class="text-blue-600 text-sm space-y-1">
-                    <p>✅ <strong>Toutes les fonctionnalités accessibles</strong> dès à présent, même en démo</p>
-                    <p>✅ <strong>Aucune limite</strong> sur le nombre de certificats</p>
-                    <p>🔄 Logiciel temporairement fermé (racheté récemment) • <strong>Migration open source prévue</strong> prochainement</p>
+                    <p>✅ <strong>Code source disponible</strong> sur GitHub sous licence AGPL v3</p>
+                    <p>✅ <strong>Support commercial</strong> et licence propriétaire pour entreprises</p>
+                    <p>✅ <strong>Installation managée</strong> • Configuration personnalisée • SLA garantis</p>
+                    <p class="mt-3 flex gap-4 justify-center">
+                        <a href="https://github.com/rdemsystems/pki" target="_blank" class="text-blue-700 hover:text-blue-900 underline font-semibold">📦 GitHub Repository</a>
+                        <a href="https://pki.rdem-systems.com" target="_blank" class="text-blue-700 hover:text-blue-900 underline font-semibold">📚 Documentation</a>
+                    </p>
                 </div>
             </div>
 
@@ -601,7 +605,7 @@
             </p>
             <div class="bg-blue-50 border border-blue-200 rounded-lg p-4 mb-8 max-w-2xl mx-auto">
                 <p class="text-blue-700 text-sm">
-                    ℹ️ <strong>Philosophie OpenSource :</strong> Toutes les fonctionnalités sont accessibles sans restriction, même en démo. Aucune limite sur les certificats. Migration vers open source prévue prochainement.
+                    ℹ️ <strong>Solution Open Source :</strong> Le code source est disponible sur <a href="https://github.com/rdemsystems/pki" target="_blank" class="underline font-semibold hover:text-blue-900">GitHub</a> (AGPL v3). Documentation sur <a href="https://pki.rdem-systems.com" target="_blank" class="underline font-semibold hover:text-blue-900">pki.rdem-systems.com</a>. Support commercial et licence propriétaire disponibles.
                 </p>
             </div>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
