license: Update references from AGPL v3 to SSPL

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     Notre offre commerciale s'appuie sur notre projet open source :
                 </p>
                 <div class="text-blue-600 text-sm space-y-1">
-                    <p>✅ <strong>Code source disponible</strong> sur GitHub sous licence AGPL v3</p>
+                    <p>✅ <strong>Code source disponible</strong> sur GitHub sous licence SSPL</p>
                     <p>✅ <strong>Support commercial</strong> et licence propriétaire pour entreprises</p>
                     <p>✅ <strong>Installation managée</strong> • Configuration personnalisée • SLA garantis</p>
                     <p class="mt-3 flex gap-4 justify-center">
@@ -605,7 +605,7 @@
             </p>
             <div class="bg-blue-50 border border-blue-200 rounded-lg p-4 mb-8 max-w-2xl mx-auto">
                 <p class="text-blue-700 text-sm">
-                    ℹ️ <strong>Solution Open Source :</strong> Le code source est disponible sur <a href="https://github.com/rdemsystems/pki" target="_blank" class="underline font-semibold hover:text-blue-900">GitHub</a> (AGPL v3). Documentation sur <a href="https://pki.rdem-systems.com" target="_blank" class="underline font-semibold hover:text-blue-900">pki.rdem-systems.com</a>. Support commercial et licence propriétaire disponibles.
+                    ℹ️ <strong>Solution Open Source :</strong> Le code source est disponible sur <a href="https://github.com/rdemsystems/pki" target="_blank" class="underline font-semibold hover:text-blue-900">GitHub</a> (SSPL). Documentation sur <a href="https://pki.rdem-systems.com" target="_blank" class="underline font-semibold hover:text-blue-900">pki.rdem-systems.com</a>. Support commercial et licence propriétaire disponibles.
                 </p>
             </div>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
