fix: remplacer 'IVVQ' par 'Tests et validations' pour meilleur SEO

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                 <a href="https://managed-services.rdem-systems.com" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">Services managés</a>
                 <a href="https://mariadb.rdem-systems.com" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">MariaDB</a>
                 <a href="https://referral.rdem-systems.com" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">Programme d'apporteurs d'affaires</a>
-                <a href="https://ivvq.rdem-systems.com" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">IVVQ</a>
+                <a href="https://ivvq.rdem-systems.com" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">Tests et validations</a>
             </div>
             <p class="text-gray-400 mb-2">&copy; 2025 RDEM Systems. Tous droits réservés.</p>
             <p class="text-gray-400 mb-2">RDEM Systems accompagne les entreprises dans la sortie des écosystèmes fermés (VMWare, AWS, Azure, GCP) via des migrations sécurisées vers Proxmox VE en France, opérées sur notre propre infrastructure réseau BGP (AS206014), synchronisée par nos serveurs NTP - dont un serveur Stratum 1.</p>
